--- a/DesignerRHN/DesignerRHN-war/web/motivolocalizacion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/motivolocalizacion.xhtml
@@ -29,7 +29,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.codigo}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.codigo}" id="editarCodigo" style="height: 12px;  border-radius: 0px; width: 400px; text-transform: uppercase"  > 
+                                            <p:inputText value="#{info.codigo}"  maxlength="4" id="editarCodigo" style="height: 12px;  border-radius: 0px; width: 400px; text-transform: uppercase"  > 
                                                 <p:ajax event="select" listener="#{controlMotivosLocalizaciones.cambiarIndice(indice, 0)}" process="@this"/> 
                                                 <p:ajax event="change" listener="#{controlMotivosLocalizaciones.modificarMotivosContrato(indice, 'N', info.codigo)}"  update="codigo"/>
                                             </p:inputText>
@@ -40,7 +40,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText style="text-transform: uppercase" value="#{info.descripcion}"  /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.descripcion}" id="editarNombre" style="height: 12px;  border-radius: 0px; width: 420px; text-transform: uppercase"  > 
+                                            <p:inputText value="#{info.descripcion}" maxlength="30" id="editarNombre" style="height: 12px;  border-radius: 0px; width: 420px; text-transform: uppercase"  > 
                                                 <p:ajax event="select" listener="#{controlMotivosLocalizaciones.cambiarIndice(indice, 1)}" process="@this"/> 
                                                 <p:ajax event="change"  listener="#{controlMotivosLocalizaciones.modificarMotivosContrato(indice, 'N', info.descripcion)}" update="descripcion"/>
                                             </p:inputText>
@@ -221,19 +221,18 @@
 
 
 
-                    <p:dialog id="nuevoRegistroMotivosLocalizaciones" header="Nuevo Registro" widgetVar="nuevoRegistroMotivosLocalizaciones" closable="false" resizable="false"  draggable="false" modal="true" height="150" width="310" style=" padding: 0px">  
+                    <p:dialog id="nuevoRegistroMotivosLocalizaciones" header="Nuevo Registro" widgetVar="nuevoRegistroMotivosLocalizaciones" closable="false" resizable="false"  draggable="false" modal="true" height="150" width="320" style=" padding: 0px">  
                         <center><strong><h:outputText id="informacion" value="Nuevo Motivo Localización" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
                         <p:panel id="nuevoMotivoContrato" style="border: none;">
 
                             <strong><h:outputText value="*Código: "  style="left: 10px; position: absolute; top: 60px;" /></strong>
-                            <p:inputText id="nuevoCodigo" value="#{controlMotivosLocalizaciones.nuevoMotivoContrato.codigo}" style=" width: 140px; position: absolute; left: 150px; top: 55px;">
-                                <p:ajax event="change" update="@this"/>
+                            <p:inputText id="nuevoCodigo" maxlength="4" value="#{controlMotivosLocalizaciones.nuevoMotivoContrato.codigo}" style=" width: 140px; position: absolute; left: 150px; top: 55px;text-transform: uppercase">
                             </p:inputText>
                             <p:watermark for="nuevoCodigo" value="Código" />
 
                             <strong><h:outputText value="*Descripción: "  style="left: 10px; position: absolute; top: 90px;" /></strong>
-                            <p:inputText  id="nuevoNombre" value="#{controlMotivosLocalizaciones.nuevoMotivoContrato.descripcion}" style=" width: 140px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
+                            <p:inputText  id="nuevoNombre" maxlength="30" value="#{controlMotivosLocalizaciones.nuevoMotivoContrato.descripcion}" style=" width: 140px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoNombre" value="Descripción" />
@@ -246,18 +245,18 @@
 
 
 
-                    <p:dialog id="duplicarRegistroMotivosLocalizaciones" header="duplicar Registro" widgetVar="duplicarRegistroMotivosLocalizaciones" closable="false" resizable="false"  draggable="false" modal="true" height="150" width="310" style=" padding: 0px">  
+                    <p:dialog id="duplicarRegistroMotivosLocalizaciones" header="duplicar Registro" widgetVar="duplicarRegistroMotivosLocalizaciones" closable="false" resizable="false"  draggable="false" modal="true" height="150" width="320" style=" padding: 0px">  
                         <center><strong><h:outputText id="informacionDuplicar" value="Duplicar Motivo Localización " style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
                         <p:panel id="duplicarMotivosCambiosCargos" style="border: none;">
-                            <strong><h:outputText value="*código:"  style=" position: absolute; top: 60px;" /></strong>
-                            <p:inputText id="duplicarCodigo" value="#{controlMotivosLocalizaciones.duplicarMotivoContrato.codigo}" style=" width: 140px; position: absolute; left: 150px; top: 55px;">
+                            <strong><h:outputText value="*Código:"  style=" position: absolute; top: 60px;" /></strong>
+                            <p:inputText id="duplicarCodigo" maxlength="4" value="#{controlMotivosLocalizaciones.duplicarMotivoContrato.codigo}" style=" width: 140px; position: absolute; left: 150px; top: 55px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarCodigo" value="Código" />
 
                             <strong><h:outputText value="*Descripción:"  style=" position: absolute; top: 90px;" /></strong>
-                            <p:inputText id="duplicarNombre" value="#{controlMotivosLocalizaciones.duplicarMotivoContrato.descripcion}"  style=" width: 140px; position: absolute; left: 150px; top: 85px;" >
+                            <p:inputText id="duplicarNombre" maxlength="30" value="#{controlMotivosLocalizaciones.duplicarMotivoContrato.descripcion}"  style=" width: 140px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarNombre" value="Descripción" />
