--- a/DesignerRHN/DesignerRHN-war/web/claseausentismo.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/claseausentismo.xhtml
@@ -32,7 +32,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.codigo}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.codigo}" id="editarCodigo" style="height: 12px;  border-radius: 0px; width: 400px; text-transform: uppercase"  > 
+                                            <p:inputText value="#{info.codigo}" maxlength="5" id="editarCodigo" style="height: 12px;  border-radius: 0px; width: 400px; text-transform: uppercase"  > 
                                                 <p:ajax event="select" listener="#{controlClasesAusentismos.cambiarIndice(indice, 0)}" process="@this"/> 
                                                 <p:ajax event="change" listener="#{controlClasesAusentismos.modificarClasesAusentismos(indice, 'N', info.codigo)}"  update="codigo"/>
                                             </p:inputText>
@@ -44,7 +44,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText style="text-transform: uppercase" value="#{info.descripcion}"  /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.descripcion}" id="editarNombre" style="height: 12px;  border-radius: 0px; width: 99%; text-transform: uppercase"  > 
+                                            <p:inputText value="#{info.descripcion}" maxlength="50" id="editarNombre" style="height: 12px;  border-radius: 0px; width: 99%; text-transform: uppercase"  > 
                                                 <p:ajax event="select" listener="#{controlClasesAusentismos.cambiarIndice(indice, 1)}" process="@this"/> 
                                                 <p:ajax event="change"  listener="#{controlClasesAusentismos.modificarClasesAusentismos(indice, 'N', info.descripcion)}" update="descripcion"/>
                                             </p:inputText>
@@ -282,13 +282,13 @@
                         <p:panel id="nuevaTipoempresa" style="border: none;">
 
                             <strong><h:outputText value="#{msg['codigoD']}"  style="left: 15px; position: absolute; top: 60px;" /></strong>
-                            <p:inputText id="nuevoCodigo" value="#{controlClasesAusentismos.nuevoClasesAusentismos.codigo}" style=" width: 135px; position: absolute; left: 135px; top: 55px;text-transform: uppercase">
+                            <p:inputText id="nuevoCodigo" maxlength="4" value="#{controlClasesAusentismos.nuevoClasesAusentismos.codigo}" style=" width: 135px; position: absolute; left: 135px; top: 55px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoCodigo" value="#{msg['codigo']}" />
 
                             <strong><h:outputText value="#{msg['nombreD']}"  style="left: 15px;  position: absolute; top: 90px;" /></strong>
-                            <p:inputText  id="nuevoNombre" value="#{controlClasesAusentismos.nuevoClasesAusentismos.descripcion}" style=" width: 135px; position: absolute; left: 135px; top: 85px;text-transform: uppercase">
+                            <p:inputText  id="nuevoNombre" maxlength="50" value="#{controlClasesAusentismos.nuevoClasesAusentismos.descripcion}" style=" width: 135px; position: absolute; left: 135px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoNombre" value="#{msg['descripcion']}" />
@@ -316,13 +316,13 @@
                         <p:panel id="duplicarTE" style="border: none;">
 
                             <strong><h:outputText value="#{msg['codigoD']}"  style=" position: absolute; top: 60px;" /></strong>
-                            <p:inputText id="duplicarCodigo" value="#{controlClasesAusentismos.duplicarClasesAusentismos.codigo}" style=" width: 135px; position: absolute; left: 135px; top: 55px;text-transform: uppercase">
+                            <p:inputText id="duplicarCodigo" maxlength="4" value="#{controlClasesAusentismos.duplicarClasesAusentismos.codigo}" style=" width: 135px; position: absolute; left: 135px; top: 55px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarCodigo" value="Código" />
 
                             <strong><h:outputText value="#{msg['nombreD']}"  style=" position: absolute; top: 90px;" /></strong>
-                            <p:inputText  id="duplicarNombre" value="#{controlClasesAusentismos.duplicarClasesAusentismos.descripcion}" style=" width: 135px; position: absolute; left: 135px; top: 85px;text-transform: uppercase">
+                            <p:inputText  id="duplicarNombre" maxlength="50" value="#{controlClasesAusentismos.duplicarClasesAusentismos.descripcion}" style=" width: 135px; position: absolute; left: 135px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarNombre" value="#{msg['descripcion']}" />
