--- a/DesignerRHN/DesignerRHN-war/web/departamento.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/departamento.xhtml
@@ -30,7 +30,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.codigo}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.codigo}" id="editarCodigo" style="height: 12px;  border-radius: 0px; width: 400px; text-transform: uppercase"  > 
+                                            <p:inputText value="#{info.codigo}" maxlength="4" id="editarCodigo" style="height: 12px;  border-radius: 0px; width: 400px; text-transform: uppercase"  > 
                                                 <p:ajax event="select" listener="#{controlDepartamentos.cambiarIndice(indice, 0)}" process="@this"/> 
                                                 <p:ajax event="change" listener="#{controlDepartamentos.modificarDepartamentos(indice, 'N', info.codigo)}"  update="codigo"/>
                                             </p:inputText>
@@ -42,7 +42,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText style="text-transform: uppercase" value="#{info.nombre}"  /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.nombre}" id="editarNombre" style="height: 12px;  border-radius: 0px; width: 99%; text-transform: uppercase"  > 
+                                            <p:inputText value="#{info.nombre}" maxlength="30" id="editarNombre" style="height: 12px;  border-radius: 0px; width: 99%; text-transform: uppercase"  > 
                                                 <p:ajax event="select" listener="#{controlDepartamentos.cambiarIndice(indice, 1)}" process="@this"/> 
                                                 <p:ajax event="change"  listener="#{controlDepartamentos.modificarDepartamentos(indice, 'N', info.nombre)}" update="descripcion"/>
                                             </p:inputText>
@@ -278,13 +278,13 @@
                         <p:panel id="nuevaTipoempresa" style="border: none;">
 
                             <strong><h:outputText value="*Código: "  style=" position: absolute; top: 60px;" /></strong>
-                            <p:inputText id="nuevoCodigo" value="#{controlDepartamentos.nuevoDepartamentos.codigo}" style=" width: 140px; position: absolute; left: 135px; top: 55px;text-transform: uppercase">
+                            <p:inputText id="nuevoCodigo" maxlength="4" value="#{controlDepartamentos.nuevoDepartamentos.codigo}" style=" width: 140px; position: absolute; left: 135px; top: 55px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoCodigo" value="Código" />
 
-                            <strong><h:outputText value="*Nombre: "  style=" position: absolute; top: 90px;" /></strong>
-                            <p:inputText  id="nuevoNombre" value="#{controlDepartamentos.nuevoDepartamentos.nombre}" style=" width: 140px; position: absolute; left: 135px; top: 85px;text-transform: uppercase">
+                            <strong><h:outputText value="*Nombre: "   style=" position: absolute; top: 90px;" /></strong>
+                            <p:inputText  id="nuevoNombre" maxlength="30" value="#{controlDepartamentos.nuevoDepartamentos.nombre}" style=" width: 140px; position: absolute; left: 135px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoNombre" value="Nombre" />
@@ -311,13 +311,13 @@
 
                         <p:panel id="duplicarTE" style="border: none;">
                             <strong><h:outputText value="código "  style=" position: absolute; top: 60px;" /></strong>
-                            <p:inputText id="duplicarCodigo" value="#{controlDepartamentos.duplicarDepartamentos.codigo}" style=" width: 140px; position: absolute; left: 135px; top: 55px;text-transform: uppercase">
+                            <p:inputText id="duplicarCodigo" maxlength="4" value="#{controlDepartamentos.duplicarDepartamentos.codigo}" style=" width: 140px; position: absolute; left: 135px; top: 55px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarCodigo" value="Código" />
 
                             <strong><h:outputText value="Descripcion"  style=" position: absolute; top: 90px;" /></strong>
-                            <p:inputText id="duplicarNombre" value="#{controlDepartamentos.duplicarDepartamentos.nombre}"  style=" width: 140px; position: absolute; left: 135px; top: 85px;text-transform: uppercase">
+                            <p:inputText id="duplicarNombre" maxlength="30" value="#{controlDepartamentos.duplicarDepartamentos.nombre}"  style=" width: 140px; position: absolute; left: 135px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarNombre" value="Descripcion" />
