--- a/DesignerRHN/DesignerRHN-war/web/motivocambiosueldo.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/motivocambiosueldo.xhtml
@@ -29,7 +29,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.codigo}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.codigo}" id="editarCodigo" style="height: 12px;  border-radius: 0px; width: 400px; text-transform: uppercase"  > 
+                                            <p:inputText value="#{info.codigo}" maxlength="4" id="editarCodigo" style="height: 12px;  border-radius: 0px; width: 400px; text-transform: uppercase"  > 
                                                 <p:ajax event="select"  listener="#{controlMotivosCambiosSueldos.cambiarIndice(indice, 0)}"  process="@this"/> 
                                                 <p:ajax event="change"  listener="#{controlMotivosCambiosSueldos.modificarMotivosCambiosSueldos(indice, 'N', info.codigo)}"  update="codigo"/>
                                             </p:inputText>
@@ -40,7 +40,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText style="text-transform: uppercase" value="#{info.nombre}"  /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.nombre}"  id="editarNombre" style=" height: 12px; border-radius: 0px; width: 99%; text-transform: uppercase"  > 
+                                            <p:inputText value="#{info.nombre}" maxlength="30" id="editarNombre" style=" height: 12px; border-radius: 0px; width: 99%; text-transform: uppercase"  > 
                                                 <p:ajax event="select"   listener="#{controlMotivosCambiosSueldos.cambiarIndice(indice, 1)}" process="@this"/> 
                                                 <p:ajax event="change"  listener="#{controlMotivosCambiosSueldos.modificarMotivosCambiosSueldos(indice, 'N', info.nombre)}" update="descripcion"/>
                                             </p:inputText>
@@ -232,13 +232,13 @@
                         <p:panel id="nuevoMotivoCambioSueldo" style="border: none;">
 
                             <strong><h:outputText value="*Código: "  style="left: 10px; position: absolute; top: 60px" /></strong>
-                            <p:inputText id="nuevoCodigo" value="#{controlMotivosCambiosSueldos.nuevoMotivoCambioSueldo.codigo}" style="text-transform: uppercase ; width: 140px; position: absolute; left: 150px; top: 55px;">
+                            <p:inputText id="nuevoCodigo" maxlength="4" value="#{controlMotivosCambiosSueldos.nuevoMotivoCambioSueldo.codigo}" style="text-transform: uppercase ; width: 140px; position: absolute; left: 150px; top: 55px;">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoCodigo" value="Código" />
 
                             <strong><h:outputText value="*Descripción: "  style="left: 10px; position: absolute; top: 90px" /></strong>
-                            <p:inputText  id="nuevoNombre" value="#{controlMotivosCambiosSueldos.nuevoMotivoCambioSueldo.nombre}" style="text-transform: uppercase ; width: 140px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
+                            <p:inputText  id="nuevoNombre" maxlength="30" value="#{controlMotivosCambiosSueldos.nuevoMotivoCambioSueldo.nombre}" style="text-transform: uppercase ; width: 140px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoNombre" value="Descripción" />
@@ -263,13 +263,13 @@
 
                         <p:panel id="duplicarMotivosCambiosSueldos" style="border: none;">
                             <strong><h:outputText value="*Codigo "  style="left: 10px; position: absolute; top: 60px" /></strong>
-                            <p:inputText id="duplicarCodigo" value="#{controlMotivosCambiosSueldos.duplicarMotivoCambioSueldo.codigo}" style="text-transform: uppercase ;width: 140px; position: absolute; left: 150px; top: 55px;">
+                            <p:inputText id="duplicarCodigo" maxlength="4" value="#{controlMotivosCambiosSueldos.duplicarMotivoCambioSueldo.codigo}" style="text-transform: uppercase ;width: 140px; position: absolute; left: 150px; top: 55px;">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarCodigo" value="Código" />
 
                             <strong><h:outputText value="*Descripción:"  style="left: 10px; position: absolute; top: 90px" /></strong>
-                            <p:inputText id="duplicarNombre" value="#{controlMotivosCambiosSueldos.duplicarMotivoCambioSueldo.nombre}"  style="text-transform: uppercase ; width: 140px; position: absolute; left: 150px; top: 85px;" >
+                            <p:inputText id="duplicarNombre" maxlength="30" value="#{controlMotivosCambiosSueldos.duplicarMotivoCambioSueldo.nombre}"  style="text-transform: uppercase ; width: 140px; position: absolute; left: 150px; top: 85px;" >
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarNombre" value="Descripción" />
